terraform/listener.tf
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.printo.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type = "forward"

    forward {
      target_group {
        arn = aws_lb_target_group.printo.arn
      }
    }
  }
}
